--- a/index.html
+++ b/index.html
@@ -12,21 +12,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
 
-	<!-- Icon Font Stylesheet -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
-	<!-- Stylesheet -->
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/leftNav.css" rel="stylesheet">
 
-	<!-- top menu  -->
 	<link href="css/topNav.css" rel="stylesheet" type="text/css">
 
 </head>
 
 <body class="bg-img">
-	<!-- Page Container -->
-	<!-- Navbar Start -->
 	<header class="nTop">
 		<div class="box_31">
 			<nav class="nav_2">
@@ -102,9 +97,8 @@
 			</nav>
 		</div>
 	</header>
-	<!-- Navbar End -->
-	<div id="" class="container"><!--p>Saved name is:</p><p id="demo"></p-->
-		<!-- Left Column -->
+
+	<div id="" class="container">
 		<div class="left-column">
 			<a href="index.html"><img src="img/피아노사진2.jpg" style="width:300px" alt="피아노사진"></a>
 			<hr class="line_1">
@@ -196,78 +190,10 @@
 					</ul>
 				</li>
 				</ul>
-
-
-
-				<!--ul id="sitemap">
-					<li><a href="#">미래</a>
-						<ul>
-							<li><a href="#">가장 중요한 것</a>
-								<ul id="222">
-									<li><a href="fut_me.html" onclick="javascript:sendFunc('111')">111</a></li>
-									<li><a href="fut_me.html" onclick="javascript:sendFunc('222')">222</a></li>
-									<li><a href="fut_me.html" onclick="javascript:sendFunc('333')">333</a></li>
-								</ul>							
-							</li>
-							<li><a href="#">직업</a>
-								<ul>
-									<li><a href="fut_me.html">111</a></li>
-									<li><a href="fut_me.html">222</a></li>
-									<li><a href="fut_me.html">333</a></li>
-								</ul>							
-							</li>
-						</ul>					
-					</li>
-					<li><a href="#">Second link</a>
-						<ul>
-							<li><a href="#">First link</a>
-								<ul>
-									<li><a href="#">First link</a></li>
-									<li><a href="#">Second link</a></li>
-									<li><a href="#">Third link</a></li>
-									<li><a href="#">Fourth link</a></li>
-									<li><a href="#">Fifth link</a></li>
-								</ul>							
-							</li>
-							<li><a href="#">Second link</a>
-								<ul>
-									<li><a href="#">First link</a></li>
-									<li><a href="#">Second link</a></li>
-									<li><a href="#">Third link</a></li>
-									<li><a href="#">Fourth link</a></li>
-									<li><a href="#">Fifth link</a></li>
-								</ul>							
-							</li>
-							<li><a href="#">Third link</a></li>
-							<li><a href="#">Fourth link</a></li>
-							<li><a href="#">Fifth link</a></li>
-						</ul>					
-					</li>
-					<li><a href="#">Third link</a>
-						<ul>
-							<li><a href="#">First link</a></li>
-							<li><a href="#">Second link</a></li>
-							<li><a href="#">Third link</a>
-								<ul>
-									<li><a href="#">First link</a></li>
-									<li><a href="#">Second link</a></li>
-									<li><a href="#">Third link</a></li>
-									<li><a href="#">Fourth link</a></li>
-									<li><a href="#">Fifth link</a></li>
-								</ul>							
-							</li>
-							<li><a href="#">Fourth link</a></li>
-							<li><a href="#">Fifth link</a></li>
-						</ul>					
-					</li>
-					
-				</ul-->
 			</nav>
 			<br>
 		</div>
-		<!-- End Left Column -->
 
-		<!-- Right Column -->
 		<div class="right-column">
 			<div class="box_32">
 				<div id="" class="box_35">
@@ -288,21 +214,19 @@
 						</div>
 						<div>
 							<p class="text_deco_8">김규민 가족소개 홈페이지</p>
-							<p class="text_deco_9">경성대학교 소프트웨어학과 2020675008 김규민<br>The king is back bro</p>
+							<p class="text_deco_9">경성대학교 소프트웨어학과 2020675008 김규민 가족소개 웹 입니다.
+
+							</p>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- End Right Column -->
 		</div>
-
-		<!-- End Page Container -->
 	</div>
-	<!-- footer Column -->
 	<div class="footer">
 		<p>&copy; 2023 김규민</p>
 	</div>
-	<!-- ENnd footer Column -->
+
 </body>
 
 </html>
